--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Teachers Connect</title>
     <link rel="apple-touch-icon" href="./images/logo.png" />
     <link rel="manifest" href="./manifest.json" />
+    <link href="/src/css/tailwind.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
